# gapttuk

./: .dockerignore  .env.example  .gitignore  DECISION_LOG.md  Dockerfile  MORNING_BRIEFING.md  NIGHT_06_RESULT.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
app/: README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: api_endpoints.dart  constants.dart  router.dart  theme.dart
app/lib/models/: alert.dart  alert.freezed.dart  alert.g.dart  api_response.dart  api_response.freezed.dart  api_response.g.dart  monthly_price.dart  notification.dart  notification.freezed.dart  notification.g.dart  price_history.dart  price_history.freezed.dart  price_history.g.dart  product.dart  product.freezed.dart  product.g.dart  user.dart  user.freezed.dart  user.g.dart
app/lib/providers/: auth_provider.dart  auth_provider.g.dart  product_provider.dart  product_provider.g.dart  service_providers.dart  service_providers.g.dart
app/lib/services/: alert_service.dart  api_client.dart  auth_service.dart  device_service.dart  notification_service.dart  prediction_service.dart  product_service.dart  push_service.dart  reward_service.dart  token_storage.dart
app/lib/utils/: error_utils.dart
app/lib/widgets/: loading_skeleton.dart  monthly_price_chart.dart  price_chart.dart  product_card.dart
app/test/: widget_test.dart
app/test/config/: theme_test.dart
app/test/models/: alert_test.dart  notification_test.dart  price_history_test.dart  product_test.dart  user_test.dart
app/test/screens/: login_screen_test.dart  onboarding_screen_test.dart  settings_screen_test.dart
app/test/services/: alert_service_test.dart  api_client_test.dart  auth_service_test.dart  device_service_test.dart  notification_service_test.dart  prediction_service_test.dart  (+4 more)
app/web/: index.html  manifest.json
docs/: REVIEW_FOLLOWUP.md
docs/plans/: 2026-03-06-quality-improvement-roadmap.md  2026-03-06-reward-system-v08-design.md  2026-03-06-step53-design.md  2026-03-06-step53-implementation.md  2026-03-07-phase1-critical-fixes-design.md  2026-03-07-phase1-implementation.md  2026-03-07-phase2-implementation.md  2026-03-07-phase3-quality-security.md
documents/: 1-1.build_db.md  IMPROVEMENT_ROADMAP.md  m1-1-annotations.md  plan.md  prd.md  schema-design.md  tech-stack-research.md  ui-architecture.md
scripts/: comprehensive_review.py  doc_cross_check.py  m1_2_review.py  validate_m1_1_annotations.py
server/: .env.example  Cargo.toml
server/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_seed_data.down.sql  002_seed_data.up.sql  003_schema_fixes.down.sql  003_schema_fixes.up.sql  004_categories_columns.down.sql  004_categories_columns.up.sql  005_user_points_check.down.sql  005_user_points_check.up.sql  006_auth_provider_check.down.sql  006_auth_provider_check.up.sql  007_push_alerts.down.sql  007_push_alerts.up.sql  008_performance_indexes.down.sql  008_performance_indexes.up.sql  009_query_indexes.down.sql  009_query_indexes.up.sql  010_seed_shopping_malls.down.sql  010_seed_shopping_malls.up.sql  011_privacy_consent.down.sql  011_privacy_consent.up.sql  012_keyword_alerts_index.down.sql  012_keyword_alerts_index.up.sql  013_reward_v08.down.sql  013_reward_v08.up.sql  014_reward_check_expand.down.sql  014_reward_check_expand.up.sql  015_performance_indexes_v2.down.sql  015_performance_indexes_v2.up.sql  016_point_txn_cursor_index.down.sql  016_point_txn_cursor_index.up.sql  017_price_history_monthly.down.sql  017_price_history_monthly.up.sql  018_alert_unique_constraints.down.sql  018_alert_unique_constraints.up.sql  019_ttl_cleanup_indexes.down.sql  019_ttl_cleanup_indexes.up.sql  020_fk_cascade.down.sql  020_fk_cascade.up.sql
server/src/: cache.rs  config.rs  error.rs  lib.rs  main.rs
server/src/api/: mod.rs  pagination.rs
server/src/api/routes/: alerts.rs  auth.rs  devices.rs  mod.rs  notifications.rs  predictions.rs  products.rs  rewards.rs
server/src/auth/: extractor.rs  jwt.rs  mod.rs
server/src/auth/providers/: apple.rs  google.rs  kakao.rs  mod.rs  naver.rs
server/src/crawlers/: coupang.rs  mod.rs  scheduler.rs  stats.rs  ua.rs
server/src/db/: mod.rs
server/src/middleware/: access_log.rs  bot_guard.rs  mod.rs  rate_limit.rs
server/src/models/: ai_prediction.rs  alert.rs  card_discount.rs  cent.rs  event.rs  favorite.rs  mod.rs  notification.rs  popular_search.rs  price_history.rs  product.rs  reward.rs  security.rs  user.rs
server/src/push/: apns.rs  fcm.rs  mod.rs
server/src/services/: ai_prediction_service.rs  alert_service.rs  auth_service.rs  device_service.rs  mod.rs  notification_service.rs  product_service.rs  reward_service.rs
server/tests/: alert_service_test.rs  auth_service_test.rs  auth_test.rs  health_test.rs  notification_service_test.rs  products_test.rs
server/tests/common/: mod.rs
(+18 files in other folders)
