[package]
name = "gapttuk-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# --- HTTP 프레임워크 ---
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# --- DB ---
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

# --- 직렬화 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 인증 ---
jsonwebtoken = "9"

# --- HTTP 클라이언트 (크롤링용) ---
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"

# --- Rate Limiting ---
tower_governor = "0.8"

# --- 스케줄러 ---
tokio-cron-scheduler = "0.13"

# --- 푸시 ---
a2 = "0.10"
fcm = "0.9"

# --- 캐시 ---
moka = { version = "0.12", features = ["future"] }

# --- 모니터링 ---
sentry = "0.35"

# --- 유틸리티 ---
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
