[package]
name = "gapttuk-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# --- HTTP 프레임워크 ---
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "timeout", "compression-gzip"] }

# --- DB ---
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "rust_decimal",
    "ipnetwork",
] }
ipnetwork = "0.20"

# --- 직렬화 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 인증 ---
jsonwebtoken = "9"

# --- HTTP 클라이언트 (크롤링용) ---
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.25"

# --- Rate Limiting ---
tower_governor = "0.8"
governor = "0.10"

# --- 스케줄러 ---
tokio-cron-scheduler = "0.15"

# --- 푸시 ---
a2 = "0.10"
# NOTE: fcm 0.9는 Google 레거시 FCM API 사용 (2024.06 폐지됨)
# M1-8 구현 시 fcm-v1 또는 google-authz + reqwest 직접 호출로 교체 예정
# fcm = "0.9"

# --- 캐시 ---
moka = { version = "0.12", features = ["future"] }

# --- 모니터링 ---
sentry = "0.37"

# --- 암호 ---
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# --- 유틸리티 ---
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
